feat : add cinema model,controller and route for implementing CRUD and create
